# perlin-noise

./: .flake8  .pylintrc  README.md  install.bat  mypy.ini  pyproject.toml
src/: fragment.glsl  triangle.py  vertex.glsl
